testData/examples/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test1
  labels:
    type: namespace
